<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <RadioGroup
        android:id="@+id/login_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_item_height"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/login_type_radio_button_login_by_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login_by_password"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/login_type_radio_button_login_by_verification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login_by_verifycode"
            android:textColor="@color/black"
            android:textSize="@dimen/common_font_size" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_item_height"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/phone_number_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/editor_selector"
            android:hint="@string/input_phone_number"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/common_font_size"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_login_form_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_item_height"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/login_password"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/editor_selector"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/common_font_size"
                android:padding="5dp" />
            <Button
                android:id="@+id/forget_password_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/verification_code_login_form_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_item_height"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/verifycode"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <EditText
                android:id="@+id/verification_code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/editor_selector"
                android:hint="@string/input_verifycode"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/common_font_size"
                android:padding="5dp" />
            <Button
                android:id="@+id/get_verification_code_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:text="@string/get_verifycode"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/form_item_height"
       android:orientation="horizontal"
       android:gravity="center_vertical">
       <CheckBox
           android:id="@+id/remember_password_checkbox"
           android:layout_width="54dp"
           android:layout_height="54dp"
           android:padding="5dp"
           android:button="@drawable/checkbox_selector"
           android:scaleX="0.5"
           android:scaleY="0.5"
           android:layout_marginStart="-15dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/remember_password"
           android:textColor="@color/black"
           android:textSize="@dimen/common_font_size" />
   </LinearLayout>
    
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/common_font_size" />

</LinearLayout>