<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_item_height"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/input_new_password"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/editor_selector"
            android:hint="@string/input_new_password_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/common_font_size"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_item_height"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/confirm_new_password"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/editor_selector"
            android:hint="@string/input_new_password_again"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/common_font_size"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verification_code_login_form_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_item_height"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/verifycode"
            android:textSize="@dimen/common_font_size"
            android:textColor="@color/black" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <EditText
                android:id="@+id/verification_code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/editor_selector"
                android:hint="@string/input_verifycode"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/common_font_size"
                android:padding="5dp" />
            <Button
                android:id="@+id/get_verification_code_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:text="@string/get_verifycode"
                android:textColor="@color/black"
                android:textSize="@dimen/common_font_size" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="@color/black"
        android:textSize="@dimen/common_font_size" />

</LinearLayout>